--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <header>
+      <a href="./index.html">WebStudio</a>
+      <nav>
+        <ul>
+          <li>Studio</li>
+          <li>Portfolio</li>
+          <li>Contacts</li>
+        </ul>
+      </nav>
+      <span class="email">info@devstudio.com</span>
+      <span class="phone">+11 (000) 111-11-11</span>
+    </header>
+    <main>
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+    </main>
+    <footer></footer>
   </body>
 </html>
