--- a/index.html
+++ b/index.html
@@ -8,22 +8,36 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li>
+            <a href="">Studio</a>
+          </li>
+          <li>
+            <a href="">Portfolio</a>
+          </li>
+          <li>
+            <a href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <span class="email">info@devstudio.com</span>
-      <span class="phone">+11 (000) 111-11-11</span>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
-      <h2 hidden>Feature</h2>
       <section>
+        <h2 hidden>Feature</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
