--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
       </address>
     </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <h2 hidden>Feature</h2>
         <ul>
@@ -69,8 +71,8 @@
           </li>
         </ul>
       </section>
-      <h2>Our Team</h2>
       <section>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img src="./images/img.jpg" alt="Mark Guerrer" />
