--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img.jpg" alt="Mark Guerrer" />
+            <img src="./images/img.jpg" alt="Mark Guerrer" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img(1).jpg" alt="Tom Ford" />
+            <img src="./images/img(1).jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img(2).jpg" alt="Camila Garcia" />
+            <img src="./images/img(2).jpg" alt="Camila Garcia" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img(3).jpg" alt="Daniel Wilson" />
+            <img src="./images/img(3).jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
