--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -75,22 +75,30 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img.jpg" alt="Mark Guerrer" width="264" />
+            <img
+              src="./images/mark-guerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img(1).jpg" alt="Tom Ford" width="264" />
+            <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img(2).jpg" alt="Camila Garcia" width="264" />
+            <img
+              src="./images/camila-garcia.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img(3).jpg" alt="Daniel Wilson" width="264" />
+            <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
